<resources>
    <string name="app_name">SecureBike</string>
    <string name="button1">Atras</string>
    <string name="button2">Guardar cambios</string>
    <string name="textView">Configuracion</string>
    <string name="textView2">Editar perfil</string>
    <string name="textView3">Editar direcciones</string>
    <string name="editText">Usuario</string>
    <string name="editText2">Nombre</string>
    <string name="editText3">Apellidos</string>
    <string name="editText4">E-mail</string>
    <string name="editText5">Celular</string>
    <string name="editText6">Contraseña</string>
    <string name="search">¿A dónde vamos?</string>
    <string name="b1">Configuración</string>
    <string name="b2">Home</string>
    <string name="b3">Contactos</string>
    <string name="b4">Configurar Bicicletas</string>
    <string name="hintAddress">Ingresar Dirección</string>

    <string-array name="contactos">
        <item>Alejandra Sandoval</item>
        <item>Pedro Guerrero</item>
        <item>Esteban Casas</item>
        <item>Gabriel Forero</item>
        <item>Goku</item>
        <item>Kakaroto</item>
        <item>Vegeta</item>
        <item>Napoleon</item>
        <item>Atila</item>
        <item>German Garmendia</item>
        <item>Roxana Medina</item>
        <item>Orlando Florida</item>
        <item>Wall Disney</item>
    </string-array>

    <string-array name="Direcciones">
        <item>Editar direccion</item>
        <item>Casa</item>
        <item>Universidad</item>
        <item>Trabajo</item>
    </string-array>

    <string-array name="Bicicletas">
        <item>Bicicleta 1</item>
        <item>Bicicleta 2</item>
        <item>Bicicleta 3</item>
        <item>Bicicleta 4</item>
    </string-array>
    <string name="title_activity_agregar_contacto">AgregarContacto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>

</resources>