<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="134dp"
        android:entries="@array/Direcciones"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="177dp"
        android:hint="@string/textView3"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="379dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="655dp"
        android:hint="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="623dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="89dp"
        android:text="@string/textView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="602dp"
        android:hint="@string/textView2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="545dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="494dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="436dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText3" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="271dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/editText6"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="230dp"
        android:entries="@array/contactos"/>
</RelativeLayout>