<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/mapa"
        android:layout_width="304dp"
        android:layout_height="402dp"
        android:contentDescription="TODO"
        android:src="@drawable/mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531"
        app:srcCompat="@drawable/mapa" />

    <SearchView
        android:id="@+id/buscador"
        android:layout_width="290dp"
        android:layout_height="68dp"
        android:hint="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525"

        />

    <TextView
        android:id="@+id/selecionarTextView"
        android:layout_width="319dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="128dp"
        android:background="@android:drawable/editbox_background"
        android:drawableEnd="@drawable/ic_house"
        android:drawableRight="@drawable/ic_house"
        android:gravity="center_vertical"
        android:hint="Seleccione la dirección"
        android:padding="12dp"
        android:textColor="#000"
        app:drawableRightCompat="@drawable/ic_house"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAgregar"
        android:layout_width="66dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"

        android:layout_marginLeft="24dp"
        android:onClick="agregarBicicleta"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/mapa"
        app:layout_constraintRight_toRightOf="@id/buscador"
        app:layout_constraintStart_toEndOf="@id/buscador"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="Agregar Bicicleta"
        app:layout_constraintBottom_toBottomOf="@+id/bAgregar"
        app:layout_constraintRight_toRightOf="@id/buscador"
        app:layout_constraintStart_toEndOf="@id/buscador" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SOS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        android:onClick="contactos"
        />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b4"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.970"
        android:onClick="configurarBicicleta"
        />


</androidx.constraintlayout.widget.ConstraintLayout>